dfir_rs/tests/compile-fail-stable/surface_partition_port_missing.stderr
error: `partition(..)` closure argument `c` missing corresponding output port.
 --> tests/compile-fail-stable/surface_partition_port_missing.rs:5:70
  |
5 |         my_partition = source_iter(0..10) -> partition(|item, [a, b, c]| {
  |                                                                      ^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
  --> tests/compile-fail-stable/surface_partition_port_missing.rs:15:8
   |
15 |     df.run_available_sync();
   |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
